optimizer/src/generated-sources/java/com/tazadum/glsl/language/GLSLParser.java
// Generated from C:\Dev\Java\glsl-optimizer\src\main\antlr\GLSL.g4 by ANTLR 4.7
package com.tazadum.glsl.language;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GLSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ATTRIBUTE=1, BOOL=2, BREAK=3, BVEC2=4, BVEC3=5, BVEC4=6, CONST=7, CONTINUE=8, 
		DISCARD=9, DO=10, ELSE=11, FLOAT=12, FOR=13, HIGH_PRECISION=14, IF=15, 
		IN=16, INOUT=17, INT=18, INVARIANT=19, IVEC2=20, IVEC3=21, IVEC4=22, LOW_PRECISION=23, 
		MAT2=24, MAT3=25, MAT4=26, MEDIUM_PRECISION=27, OUT=28, PRECISION=29, 
		RETURN=30, SAMPLER2D=31, SAMPLERCUBE=32, STRUCT=33, UNIFORM=34, VARYING=35, 
		VEC2=36, VEC3=37, VEC4=38, VOID=39, WHILE=40, IDENTIFIER=41, FLOATCONSTANT=42, 
		INTCONSTANT=43, BOOLCONSTANT=44, INC_OP=45, DEC_OP=46, LE_OP=47, GE_OP=48, 
		EQ_OP=49, NE_OP=50, AND_OP=51, OR_OP=52, XOR_OP=53, MUL_ASSIGN=54, DIV_ASSIGN=55, 
		ADD_ASSIGN=56, MOD_ASSIGN=57, SUB_ASSIGN=58, LEFT_PAREN=59, RIGHT_PAREN=60, 
		LEFT_BRACKET=61, RIGHT_BRACKET=62, LEFT_BRACE=63, RIGHT_BRACE=64, DOT=65, 
		COMMA=66, COLON=67, EQUAL=68, SEMICOLON=69, BANG=70, DASH=71, TILDE=72, 
		PLUS=73, STAR=74, SLASH=75, PERCENT=76, LEFT_ANGLE=77, RIGHT_ANGLE=78, 
		VERTICAL_BAR=79, CARET=80, AMPERSAND=81, QUESTION=82, WHITESPACE=83, COMMENT=84, 
		MULTILINE_COMMENT=85;
	public static final int
		RULE_translation_unit = 0, RULE_variable_identifier = 1, RULE_primary_expression = 2, 
		RULE_postfix_expression = 3, RULE_primary_expression_or_function_call = 4, 
		RULE_integer_expression = 5, RULE_function_call = 6, RULE_function_call_header = 7, 
		RULE_function_identifier = 8, RULE_constructor_identifier = 9, RULE_unary_expression = 10, 
		RULE_unary_operator = 11, RULE_numeric_expression = 12, RULE_logical_expression = 13, 
		RULE_conditional_expression = 14, RULE_assignment_expression = 15, RULE_assignment_operator = 16, 
		RULE_expression = 17, RULE_constant_expression = 18, RULE_declaration = 19, 
		RULE_function_prototype = 20, RULE_function_declarator = 21, RULE_function_header = 22, 
		RULE_parameter_declaration = 23, RULE_parameter_qualifier = 24, RULE_init_declarator_list = 25, 
		RULE_array_specifier = 26, RULE_single_declaration = 27, RULE_fully_specified_type = 28, 
		RULE_type_qualifier = 29, RULE_type_specifier = 30, RULE_type_specifier_no_prec = 31, 
		RULE_precision_qualifier = 32, RULE_struct_specifier = 33, RULE_struct_declaration_list = 34, 
		RULE_struct_declaration = 35, RULE_struct_declarator_list = 36, RULE_struct_declarator = 37, 
		RULE_initializer = 38, RULE_declaration_statement = 39, RULE_statement_no_new_scope = 40, 
		RULE_simple_statement = 41, RULE_compound_statement_with_scope = 42, RULE_statement_with_scope = 43, 
		RULE_compound_statement_no_new_scope = 44, RULE_statement_list = 45, RULE_expression_statement = 46, 
		RULE_selection_statement = 47, RULE_condition = 48, RULE_iteration_statement = 49, 
		RULE_for_init_statement = 50, RULE_for_rest_statement = 51, RULE_jump_statement = 52, 
		RULE_external_declaration = 53, RULE_function_definition = 54, RULE_field_selection = 55;
	public static final String[] ruleNames = {
		"translation_unit", "variable_identifier", "primary_expression", "postfix_expression", 
		"primary_expression_or_function_call", "integer_expression", "function_call", 
		"function_call_header", "function_identifier", "constructor_identifier", 
		"unary_expression", "unary_operator", "numeric_expression", "logical_expression", 
		"conditional_expression", "assignment_expression", "assignment_operator", 
		"expression", "constant_expression", "declaration", "function_prototype", 
		"function_declarator", "function_header", "parameter_declaration", "parameter_qualifier", 
		"init_declarator_list", "array_specifier", "single_declaration", "fully_specified_type", 
		"type_qualifier", "type_specifier", "type_specifier_no_prec", "precision_qualifier", 
		"struct_specifier", "struct_declaration_list", "struct_declaration", "struct_declarator_list", 
		"struct_declarator", "initializer", "declaration_statement", "statement_no_new_scope", 
		"simple_statement", "compound_statement_with_scope", "statement_with_scope", 
		"compound_statement_no_new_scope", "statement_list", "expression_statement", 
		"selection_statement", "condition", "iteration_statement", "for_init_statement", 
		"for_rest_statement", "jump_statement", "external_declaration", "function_definition", 
		"field_selection"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'attribute'", "'bool'", "'break'", "'bvec2'", "'bvec3'", "'bvec4'", 
		"'const'", "'continue'", "'discard'", "'do'", "'else'", "'float'", "'for'", 
		"'highp'", "'if'", "'in'", "'inout'", "'int'", "'invariant'", "'ivec2'", 
		"'ivec3'", "'ivec4'", "'lowp'", "'mat2'", "'mat3'", "'mat4'", "'mediump'", 
		"'out'", "'precision'", "'return'", "'sampler2D'", "'samplerCube'", "'struct'", 
		"'uniform'", "'varying'", "'vec2'", "'vec3'", "'vec4'", "'void'", "'while'", 
		null, null, null, null, "'++'", "'--'", "'<='", "'>='", "'=='", "'!='", 
		"'&&'", "'||'", "'^^'", "'*='", "'/='", "'+='", "'%='", "'-='", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "'='", "';'", 
		"'!'", "'-'", "'~'", "'+'", "'*'", "'/'", "'%'", "'<'", "'>'", "'|'", 
		"'^'", "'&'", "'?'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ATTRIBUTE", "BOOL", "BREAK", "BVEC2", "BVEC3", "BVEC4", "CONST", 
		"CONTINUE", "DISCARD", "DO", "ELSE", "FLOAT", "FOR", "HIGH_PRECISION", 
		"IF", "IN", "INOUT", "INT", "INVARIANT", "IVEC2", "IVEC3", "IVEC4", "LOW_PRECISION", 
		"MAT2", "MAT3", "MAT4", "MEDIUM_PRECISION", "OUT", "PRECISION", "RETURN", 
		"SAMPLER2D", "SAMPLERCUBE", "STRUCT", "UNIFORM", "VARYING", "VEC2", "VEC3", 
		"VEC4", "VOID", "WHILE", "IDENTIFIER", "FLOATCONSTANT", "INTCONSTANT", 
		"BOOLCONSTANT", "INC_OP", "DEC_OP", "LE_OP", "GE_OP", "EQ_OP", "NE_OP", 
		"AND_OP", "OR_OP", "XOR_OP", "MUL_ASSIGN", "DIV_ASSIGN", "ADD_ASSIGN", 
		"MOD_ASSIGN", "SUB_ASSIGN", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
		"RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "DOT", "COMMA", "COLON", 
		"EQUAL", "SEMICOLON", "BANG", "DASH", "TILDE", "PLUS", "STAR", "SLASH", 
		"PERCENT", "LEFT_ANGLE", "RIGHT_ANGLE", "VERTICAL_BAR", "CARET", "AMPERSAND", 
		"QUESTION", "WHITESPACE", "COMMENT", "MULTILINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GLSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GLSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Translation_unitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GLSLParser.EOF, 0); }
		public List<External_declarationContext> external_declaration() {
			return getRuleContexts(External_declarationContext.class);
		}
		public External_declarationContext external_declaration(int i) {
			return getRuleContext(External_declarationContext.class,i);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterTranslation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitTranslation_unit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitTranslation_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATTRIBUTE) | (1L << BOOL) | (1L << BVEC2) | (1L << BVEC3) | (1L << BVEC4) | (1L << CONST) | (1L << FLOAT) | (1L << HIGH_PRECISION) | (1L << IN) | (1L << INOUT) | (1L << INT) | (1L << INVARIANT) | (1L << IVEC2) | (1L << IVEC3) | (1L << IVEC4) | (1L << LOW_PRECISION) | (1L << MAT2) | (1L << MAT3) | (1L << MAT4) | (1L << MEDIUM_PRECISION) | (1L << OUT) | (1L << PRECISION) | (1L << SAMPLER2D) | (1L << SAMPLERCUBE) | (1L << STRUCT) | (1L << UNIFORM) | (1L << VARYING) | (1L << VEC2) | (1L << VEC3) | (1L << VEC4) | (1L << VOID) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(112);
				external_declaration();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_identifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GLSLParser.IDENTIFIER, 0); }
		public Variable_identifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterVariable_identifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitVariable_identifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitVariable_identifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_identifierContext variable_identifier() throws RecognitionException {
		Variable_identifierContext _localctx = new Variable_identifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primary_expressionContext extends ParserRuleContext {
		public TerminalNode INTCONSTANT() { return getToken(GLSLParser.INTCONSTANT, 0); }
		public TerminalNode FLOATCONSTANT() { return getToken(GLSLParser.FLOATCONSTANT, 0); }
		public TerminalNode BOOLCONSTANT() { return getToken(GLSLParser.BOOLCONSTANT, 0); }
		public Variable_identifierContext variable_identifier() {
			return getRuleContext(Variable_identifierContext.class,0);
		}
		public TerminalNode LEFT_PAREN() { return getToken(GLSLParser.LEFT_PAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(GLSLParser.RIGHT_PAREN, 0); }
		public Primary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterPrimary_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitPrimary_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitPrimary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primary_expressionContext primary_expression() throws RecognitionException {
		Primary_expressionContext _localctx = new Primary_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primary_expression);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTCONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(INTCONSTANT);
				}
				break;
			case FLOATCONSTANT:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(FLOATCONSTANT);
				}
				break;
			case BOOLCONSTANT:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				match(BOOLCONSTANT);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				variable_identifier();
				}
				break;
			case LEFT_PAREN:
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				match(LEFT_PAREN);
				setState(127);
				expression();
				setState(128);
				match(RIGHT_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Postfix_expressionContext extends ParserRuleContext {
		public Primary_expression_or_function_callContext primary_expression_or_function_call() {
			return getRuleContext(Primary_expression_or_function_callContext.class,0);
		}
		public Postfix_expressionContext postfix_expression() {
			return getRuleContext(Postfix_expressionContext.class,0);
		}
		public TerminalNode LEFT_BRACKET() { return getToken(GLSLParser.LEFT_BRACKET, 0); }
		public Integer_expressionContext integer_expression() {
			return getRuleContext(Integer_expressionContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(GLSLParser.RIGHT_BRACKET, 0); }
		public TerminalNode DOT() { return getToken(GLSLParser.DOT, 0); }
		public Field_selectionContext field_selection() {
			return getRuleContext(Field_selectionContext.class,0);
		}
		public TerminalNode INC_OP() { return getToken(GLSLParser.INC_OP, 0); }
		public TerminalNode DEC_OP() { return getToken(GLSLParser.DEC_OP, 0); }
		public Postfix_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfix_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterPostfix_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitPostfix_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitPostfix_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Postfix_expressionContext postfix_expression() throws RecognitionException {
		return postfix_expression(0);
	}
